// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DatasetsSection.vue should render emptyState 1`] = `
<section class="datasets-section">
  <div class="container grid">
    <div class="full-width">
      <sectiontitle-stub title="HomePage.DatasetsSection.title" class="grid-cell"><template></template> <template></template> <template></template></sectiontitle-stub>
      <!---->
      <emptystate-stub text="DataPage.emptyState"><img svg-inline="" src="../../../assets/icons/common/compass.svg"></emptystate-stub>
      <!---->
      <!---->
      <router-link to="[object Object]" class="title is-small go-to-datasets">
        VIEW ALL DATASETS
      </router-link>
    </div>
  </div>
</section>
`;

exports[`DatasetsSection.vue should render initial state 1`] = `
<section class="datasets-section">
  <div class="container grid">
    <div class="full-width">
      <sectiontitle-stub title="HomePage.DatasetsSection.title" class="grid-cell"><template></template> <template></template>
        <!---->
      </sectiontitle-stub>
      <initialstate-stub title="DataPage.zeroCase.title"><template></template> <template></template> <template></template></initialstate-stub>
      <!---->
      <!---->
      <!---->
      <router-link to="[object Object]" class="title is-small go-to-datasets">
        VIEW ALL DATASETS
      </router-link>
    </div>
  </div>
</section>
`;

exports[`DatasetsSection.vue should render properly 1`] = `
<section class="datasets-section">
  <div class="container grid">
    <div class="full-width">
      <sectiontitle-stub title="HomePage.DatasetsSection.title" class="grid-cell"><template></template> <template></template> <template></template></sectiontitle-stub>
      <!---->
      <!---->
      <datasetslist-stub appliedorder="updated_at" appliedorderdirection="desc"></datasetslist-stub>
      <!---->
      <router-link to="[object Object]" class="title is-small go-to-datasets">
        VIEW ALL DATASETS
      </router-link>
    </div>
  </div>
</section>
`;
